--- a/sa-software/software/data/configbd.html
+++ b/sa-software/software/data/configbd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S.A | Acceuil</title>
+    <title>S.A | Base de données</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -13,23 +13,25 @@
     </header>
     
     <div class="container">
+        <!--DebutFormHead-->
         <form action="" method="post">
+        <!--FinFormHead-->
             <h3>Configuration de l'API</h3>
             <br>
             <label for="">Nom du système</label>
-            <input type="text" name="system_name" id="system_name">
+            <input type="text" name="nom_sa" id="nom_sa">
             <br>
             <label for="">Salle du système</label>
-            <input type="text" name="system_room" id="system_room">
+            <input type="text" name="localisation" id="localisation">
             <br>
             <label for="">Nom de la base de données</label>
-            <input type="text" name="dbname" id="dbname">
+            <input type="text" name="nom_bd" id="nom_bd">
             <br>
             <label for="">Nom d'utilisateur</label>
-            <input type="text" name="username" id="username">
+            <input type="text" name="nom_utilisateur" id="nom_utilisateur">
             <br>
             <label for="">Mot de passe</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="mot_de_passe" id="mot_de_passe">
             <br>
             <input type="submit" value="Valider">
         </form>
