--- a/sa-software/software/data/reseau.html
+++ b/sa-software/software/data/reseau.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S.A | Acceuil</title>
+    <title>S.A | Reseau</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -13,36 +13,62 @@
     </header>
     
     <div class="container">
+        <!--DebutFormHeadReseau-->
         <form action="" method="post">
+        <!--FinFormHeadReseau-->
             <h3>Configuration du réseau externe</h3>
             <br>
-            <label for="">Choisir un résesau</label>
-            <select name="network" id="network">
-                <option value="wifi">Wifi</option>
-                <option value="ethernet">Ethernet</option>
-            </select>
-            <br>
+            <div class="wrap">
+                <div>
+                    <label for="">Choisir un résesau</label>
+                    <select name="nom_reseau" id="nom_reseau">
+                        <!--ListeReseaux-->
+                        <option value="Livebox">Livebox</option>
+                        <option value="eduspot">eduspot</option>
+                        <option value="eduroam">eduroam</option>
+                        <!--FinListeReseaux-->
+                    </select>
+                </div>
+                <div>
+                    <label for="">Type de résesau</label>
+                    <select name="type_eap" id="type_eap">
+                        <option value="0">TLS</option>
+                        <option value="1">PEAP</option>
+                        <option value="2">TTLS</option>
+                    </select>
+                </div>
+            </div>
             <label for="">Nom d'utilisateur</label>
-            <input type="text" name="system_room" id="system_room">
+            <input type="text" name="nom_utilisateur" id="nom_utilisateur">
+            <br>
+            <label for="">Identifiant</label>
+            <input type="text" name="identifiant" id="identifiant">
             <br>
             <label for="">Mot de passe</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="mot_de_passe" id="mot_de_passe">
             <br>
             <input type="submit" value="Valider la configuration">
         </form>
         <br>
-
+        <!--DebutFormHeadAp-->
         <form action="" method="post">
+        <!--FinFormHeadAp-->
             <h3>Reconfiguration réseau de l'ESP</h3>
             <br>
             <label for="">Nouveau nom de réseau</label>
-            <input type="text" name="system_room" id="system_room">
+            <input type="text" name="ssid" id="ssid">
             <br>
             <label for="">Nouveau le nouveau mot de passe</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="mot_de_passe" id="mot_de_passe">
             <br>
             <label for="">Confirmez le nouveau mot de passe</label>
-            <input type="password" name="password_confirm" id="password_confirm">
+            <input type="password" name="mot_de_passe_confirm" id="mot_de_passe_confirm">
+            <br>
+            <p class="message">
+                <!--DebutMessageErreur-->
+                Le message d'erreur s'affiche ici
+                <!--FinMessageErreur-->
+            </p>
             <br>
             <input type="submit" value="Valider la reconfiguration">
         </form>
