--- a/sa-software/software/data/reseau.html
+++ b/sa-software/software/data/reseau.html
@@ -64,10 +64,8 @@
             <label for="">Confirmez le nouveau mot de passe</label>
             <input type="password" name="mot_de_passe_confirm" id="mot_de_passe_confirm">
             <br>
-            <p class="message">
-                <!--DebutMessageErreur-->
-                Le message d'erreur s'affiche ici
-                <!--FinMessageErreur-->
+            <p style="display: none;" class="message-erreur">
+                Les mot de passe entrées ne sont pas les meme
             </p>
             <br>
             <input type="submit" value="Valider la reconfiguration">
