Auto completion entrées de données

--- a/sa-software/software/data/configbd.html
+++ b/sa-software/software/data/configbd.html
@@ -11,7 +11,7 @@
         <h1>SMART CAMPUS</h1>
         <hr>
     </header>
-    
+    <a href="/">Retour à l'accueil</a>
     <div class="container">
         <!--DebutFormHead-->
         <form action="" method="post">
@@ -19,19 +19,19 @@
             <h3>Configuration de l'API</h3>
             <br>
             <label for="">Nom du système</label>
-            <input type="text" name="nom_sa" id="nom_sa">
+            <!--DebutNomSA--><input type="text" name="nom_sa" id="nom_sa"><!--FinNomSA-->
             <br>
             <label for="">Salle du système</label>
-            <input type="text" name="localisation" id="localisation">
+            <!--DebutLocalisation--><input type="text" name="localisation" id="localisation"><!--FinLocalisation-->
             <br>
             <label for="">Nom de la base de données</label>
-            <input type="text" name="nom_bd" id="nom_bd">
+            <!--DebutNomBd--><input type="text" name="nom_bd" id="nom_bd"><!--FinNomBd-->
             <br>
             <label for="">Nom d'utilisateur</label>
-            <input type="text" name="nom_utilisateur" id="nom_utilisateur">
+            <!--DebutNomUtilisateur--><input type="text" name="nom_utilisateur" id="nom_utilisateur"><!--FinNomUtilisateur-->
             <br>
             <label for="">Mot de passe</label>
-            <input type="password" name="mot_de_passe" id="mot_de_passe">
+            <!--DebutMotDePasse--><input type="password" name="mot_de_passe" id="mot_de_passe"><!--FinMotDePasse-->
             <br>
             <input type="submit" value="Valider">
         </form>
