--- a/sa-software/software/data/reseau.html
+++ b/sa-software/software/data/reseau.html
@@ -11,7 +11,9 @@
         <h1>SMART CAMPUS</h1>
         <hr>
     </header>
-    
+
+    <a href="/">Retour à l'accueil</a>
+
     <div class="container">
         <!--DebutFormHeadReseau-->
         <form action="" method="post">
